--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
           </div>          
         </div>
         <div class="buttons">
-          <a class="button is-light" id="logindis" style="display: none;" href="https://discord.com/api/oauth2/authorize?client_id=907200465467494400&redirect_uri=http%3A%2F%2Flocalhost%3A8888&response_type=token&scope=identify">
+          <a class="button is-light" id="logindis" style="display: none;" href="https://discord.com/api/oauth2/authorize?client_id=907200465467494400&redirect_uri=https%3A%2F%2Fmusical-wazzever.vercel.app%2F&response_type=token&scope=identify">
             Log in
           </a>
           <a class="button is-light" id="logoutdis" onclick="logout()">
